--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,10 @@
 .intro{
     background-color: salmon;
 }
+.titleIntro{
+    font-size: 2.5em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    margin-top: 3em;
+    margin-left: 10em;
+}
