#5 Background color for each component

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,5 @@
 .portfolio{
-    background-color: lightskyblue;
+    //background-color: #F39237;
+    background-color: #FFD6BA;
+    //background-color: #EDEDF4;
 }
