--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,6 @@
 .testimonials{
-    background-color: lightcoral;
+    //background-color: #79B473;
+   // background-color: #70A37F;
+    //background-color: #35524A;
+    background-color:  #0D3B66;
 }
