--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,5 @@
 .works{
-    background-color: lightgreen;
+    //background-color: #0D3B66;
+    background-color: #35524A;
+   // background-color: #70A37F;
 }
