--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,46 +1,45 @@
 .intro{
-    background-color: salmon;
+    background-color: #F3752B;
 }
 .titleIntro{
     font-size: 2.5em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
-    margin-top: 3em;
+    margin-top: 0.5em;
     margin-left: 8em;
      
 }
 
 .slider{
-    height: 350px;
-    display: flex;
-    position: absolute;
-    left: 0;
-    margin-top: 9em;
-
+    height: 460px;
+    margin-left: 19em;
+    padding-top: 9em;
+    
     .container{
-        width: 100vw;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
         .item{
-            width: 700px;
-            height: 100%;
-            background-color: white;
-            border-radius: 20px;
+            width: 900px;
+            background-color: #A44A3F;
             display: flex;
             align-items: center;
             justify-content: center;
+            
 
             .left{
                 flex:4;
                 height: 100%;
-                background-color: yellowgreen;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .imghome{
+                width: 100%;
+                height: 100%;
+                
             }
             .right{
                 flex:4;
-                height: 100%;
-                background-color: yellow;
+                height: 100%; 
             }
         }
     }
