--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,9 @@
 .topbar{
     width: 100%;
     height: 70px;
-    background-color: $mainColor;
+    //background-color: #92374D;
+    background-color: #EDEDF4;
+    //background-color: #2F4858;
     position: fixed;
     top:0;
     z-index: 2; //to show the topbar while scrolling
