--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -10,3 +10,30 @@
     top:0;
     z-index: 2; //to show the topbar while scrolling
 }
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content:end;
+}
+.about, .myworks{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.5em;
+    margin-top: 11px;
+    color: #F3752B;
+}
+.myworks{
+    margin-right: 3em;
+}
+.about{
+    margin-right: 10em;
+}
+.about:hover, .myworks:hover{
+    color: #0D3B66;
+}
+.name{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2em;
+    color: #b34404;
+    margin-top: 10.5px;
+    margin-right: 20em;
+}
