#7 Css for the left container

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -34,6 +34,14 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+
+                .leftContainer{
+                    width:90%;
+                    height:70%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                }
             }
 
             .imghome{
