--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -18,7 +18,7 @@
     display: flex;
     position: absolute;
     left: 0;
-    
+   
     .container{
         .item{
             width: 750px;
@@ -26,6 +26,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            //overflow: hidden;
             
 
             .left{
@@ -44,7 +45,7 @@
                 }
             }
 
-            .imghome{
+            .imgslide{
                 width: 100%;
                 height: 100%;
                 
