#5 Renamed components and order

--- a/src/components/landingpage/landingpage.scss
+++ b/src/components/landingpage/landingpage.scss
@@ -1,6 +1,6 @@
-.testimonials{
+.landingpage{
     //background-color: #79B473;
    // background-color: #70A37F;
     //background-color: #35524A;
-    background-color:  #0D3B66;
+    background-color: #F3752B;
 }
