--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -4,11 +4,12 @@
     width: 100%;
     height: 70px;
     //background-color: #92374D;
-    background-color: #EDEDF4;
+    //background-color: #EDEDF4;
     //background-color: #2F4858;
+    background-color: #FFFCF9;
     position: fixed;
     top:0;
-    z-index: 2; //to show the topbar while scrolling
+    z-index: 3; //to show the topbar while scrolling
 }
 .wrapper{
     display: flex;
