--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -6,11 +6,15 @@
     background-color: #EDEDF4;
     position: fixed;
     top:0;
-    right:0;
+    right:-300px;
     z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    &.active {
+        right: 0;
+    }
 }
 
