--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -6,7 +6,7 @@
     //background-color: #92374D;
     //background-color: #EDEDF4;
     //background-color: #2F4858;
-    background-color: #FFFCF9;
+    background-color: white;
     position: fixed;
     top:0;
     z-index: 3; //to show the topbar while scrolling
