#9 Sidebar menu working

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -2,7 +2,7 @@
 
 .topbar{
     width: 100%;
-    height: 70px;
+    height: 30px;
     //background-color: #92374D;
     //background-color: #EDEDF4;
     //background-color: #2F4858;
@@ -21,6 +21,7 @@
     font-size: 1.5em;
     margin-top: 11px;
     color: #F3752B;
+    cursor: pointer;
 }
 .myworks{
     margin-right: 3em;
