--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -12,9 +12,35 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: all 1s ease;
+    margin-top:-10px;
 
     &.active {
         right: 0;
     }
+    
+    ul{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        font-size: 30px;
+        font-weight: 300;
+        color:black;
+        width: 70%;
+
+        li{
+            margin-bottom: 20px;
+            a{
+                font-size: inherit;
+                color:inherit;
+                text-decoration: none;
+            }
+
+            &:hover{
+                font-weight: 600;
+            }
+        }
+    }
+     
 }
 
