--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,8 +1,8 @@
 @import "../../global.scss";
 
-.menu{
-    width:300px;
-    height:100vh;
+#menu{
+    width:280px;
+    height:48em;
     background-color: #EDEDF4;
     position: fixed;
     top:0;
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     transition: all 1s ease;
-    margin-top:-10px;
+    margin-top: 30px;
 
     &.active {
         right: 0;
@@ -29,7 +29,9 @@
         width: 70%;
 
         li{
-            margin-bottom: 20px;
+            margin-bottom: 50px;
+            margin-left: 5px;
+
             a{
                 font-size: inherit;
                 color:inherit;
