--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -27,6 +27,8 @@
             align-items: center;
             justify-content: center;
             //overflow: hidden;
+            margin-right: 10em;
+            margin-left: 17.5em;
             
 
             .left{
@@ -42,6 +44,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
+                    
                 }
             }
 
