--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -28,6 +28,7 @@
 }
 .about{
     margin-right: 10em;
+    text-decoration: none;
 }
 .about:hover, .myworks:hover{
     color: #0D3B66;
@@ -38,4 +39,5 @@
     color: #b34404;
     margin-top: 10.5px;
     margin-right: 20em;
+    text-decoration: none;
 }
