--- a/src/components/weatherapp/weatherapp.scss
+++ b/src/components/weatherapp/weatherapp.scss
@@ -1,5 +1,6 @@
 .weatherapp{
+    background-color: #FFD6BA;
     //background-color: #0D3B66;
-    background-color: #35524A;
+    //background-color: #35524A;
    // background-color: #70A37F;
 }
