#21 Layout - weatherapp page

--- a/src/components/quizapp/quizapp.scss
+++ b/src/components/quizapp/quizapp.scss
@@ -1,5 +1,6 @@
 .quizapp{
     //background-color: #F39237;
-    background-color: #FFD6BA;
+    //background-color: #FFD6BA;
     //background-color: #EDEDF4;
+    background-color: #F59F76;
 }
