--- a/src/components/quizapp/quizapp.scss
+++ b/src/components/quizapp/quizapp.scss
@@ -6,37 +6,39 @@
     background-color: #F59F76;
 }
 .bombhome{
-    width: 75em; 
-    margin-left: 7em;
-    margin-top: 3em;
-
+    width: 85em; 
+    margin-top: 5em;
+    margin-right: 250em;
+}
+.subtitleweather{
+    color: white;
+    font-family: 'Varela Round';
+    font-size: 4em;
+    margin-left: 1em;
+    margin-right: 0em;
+    margin-top:3.5em;
 }
 .technologies{
-    margin-left: 10em;
-    margin-top: 10em;
+    margin-left: 35.5em;
+    font-size: 1em;
     font-family: 'Varela Round';
     color: white;
+    font-size: 1.5em;
 }
 .technology{
-    margin-top: 3em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 .title{
     margin-top:1.5em;
-    margin-left: 21.5em;
+    margin-left: 2em;
     font-family: 'Varela Round';
-    color: white;
+    color: #363537;
     font-size: 3em;
-}
-.description{
-    font-family: 'Varela Round';
-    margin-top: 3em;
-    margin-left: 8em;
-    margin-right: 8em;
-    font-size: 2em;
-    color: white;
 }
 .container{
     display: flex;
     flex-direction: row;
+
 }
  
