--- a/src/components/gamesreview/gamesreview.scss
+++ b/src/components/gamesreview/gamesreview.scss
@@ -1,3 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 .gamesreview{
     background-color:  #0D3B66;
+}
+.screen{
+   margin-top: 2em;
+   width: 100%;
+   height: 100%;
+   background-image:url(../../assets/login.png);
+   background-size: cover;
+   background-position: center;
+   background-repeat:no-repeat;
+   transition: 0.5s;
+
+   animation-name:animate ;
+   animation-direction: alternate-reverse ;
+   animation-duration: 4s ;
+   animation-fill-mode: forwards;
+   animation-iteration-count: infinite ;
+   animation-play-state:running;
+   animation-timing-function:steps(1);
+
+}
+
+@keyframes animate{
+    0%{
+        background-image: url(../../assets/login.png);
+    }34%{
+        background-image: url(../../assets/accountcreate.png);
+    }68%{
+        background-image: url(../../assets/sidebar.png);
+    }100%{
+        background-image: url(../../assets/home.png);
+    }
+}
+.title3{
+    width: 1em;
+    margin-left: 21em;
+    margin-top: 1.4em;
+    padding-left: 1em;
+    background-color:blueviolet ;
+    font-size: 6em;
+    font-family: 'Varela Round';
+    padding: 20px 20px;
+    writing-mode: vertical-lr;
 }
