--- a/src/components/gamesreview/gamesreview.scss
+++ b/src/components/gamesreview/gamesreview.scss
@@ -3,9 +3,11 @@
     background-color:  #0D3B66;
 }
 .screen{
-   margin-top: 2em;
-   width: 100%;
-   height: 100%;
+   object-fit: contain;
+   margin-top: 9em;
+   margin-left: 34em;
+   width: 50%;
+   height: 50%;
    background-image:url(../../assets/login.png);
    background-size: cover;
    background-position: center;
@@ -34,13 +36,16 @@
     }
 }
 .title3{
-    width: 1em;
-    margin-left: 21em;
-    margin-top: 1.4em;
-    padding-left: 1em;
-    background-color:blueviolet ;
-    font-size: 6em;
+    font-size: 3em;
     font-family: 'Varela Round';
-    padding: 20px 20px;
-    writing-mode: vertical-lr;
+    margin-top: 1.5em;
+    margin-left: 20em;
+    color: white;
+}
+.technologies3{
+    font-family: 'Varela Round';
+    color: white;
+    font-size: 1.5em;
+    margin-left: 22.8em;
+    margin-top: 1em;
 }
