--- a/src/components/gamesreview/gamesreview.scss
+++ b/src/components/gamesreview/gamesreview.scss
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 .gamesreview{
-    background-color:  #0D3B66;
+    background-color:  #07252D;
 }
 .screen{
    object-fit: contain;
-   margin-top: 9em;
-   margin-left: 34em;
-   width: 50%;
-   height: 50%;
-   background-image:url(../../assets/login.png);
+   margin-top: 6em;
+   margin-left: 27.5em;
+   width: 60%;
+   height: 63%;
+   background-image:url(../../assets/sidebar.png);
    background-size: cover;
    background-position: center;
    background-repeat:no-repeat;
@@ -16,11 +16,11 @@
 
    animation-name:animate ;
    animation-direction: alternate-reverse ;
-   animation-duration: 4s ;
+   animation-duration: 1s ;
    animation-fill-mode: forwards;
-   animation-iteration-count: infinite ;
+   animation-iteration-count: infinite;
    animation-play-state:running;
-   animation-timing-function:steps(1);
+   animation-timing-function:step-start
 
 }
 
@@ -36,16 +36,44 @@
     }
 }
 .title3{
-    font-size: 3em;
+    font-size: 5em;
     font-family: 'Varela Round';
-    margin-top: 1.5em;
-    margin-left: 20em;
+    margin-top: 1em;
     color: white;
 }
 .technologies3{
     font-family: 'Varela Round';
     color: white;
     font-size: 1.5em;
-    margin-left: 22.8em;
+    margin-left: 18.5em;
     margin-top: 1em;
+}
+.title3{
+    letter-spacing: 15px;
+    color: #0e3742;
+    width: 100%;
+    text-align: center;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0008);
+    line-height: 0.80em;
+    outline: none;
+    animation: animate 5s linear infinite;
+}
+
+@keyframes animate
+{
+    0%,18%,20%,50.1%,60%,65.1%,80%,90.1%,92%
+    {
+        color: #0e3742;
+        text-shadow: none;
+    }
+    18.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100%
+    {
+        color: #fff;
+        text-shadow:  0 0 10px #03bcf4,
+        0 0 20px #03bcf4,
+        0 0 40px #03bcf4,
+        0 0 80px #03bcf4,
+        0 0 160px #03bcf4,
+
+    }
 }
