--- a/src/components/weatherapp/weatherapp.scss
+++ b/src/components/weatherapp/weatherapp.scss
@@ -25,8 +25,8 @@
     width: 90em;
     height: 100%;
 }
-.title2{
-    font-size:3em;
+span{
+    font-size:2.3em;
     font-family: 'Varela Round';
     margin-top: 1.5em;
     color: #183446;
@@ -35,7 +35,7 @@
 .description2{
     font-family: 'Varela Round';
     font-size: 5em;
-    margin-top: 3em;
+    margin-top: 2em;
     color: #183446;
     padding: 0.4em;
     padding-left: 1.5em;
@@ -47,4 +47,73 @@
     font-weight: 600;
     font-family: 'Varela Round';
     font-size: 1.5em;
+}
+.title2{
+    display: inline-block;
+}
+span{
+    opacity:0;
+    animation-name:animation;
+    animation-duration: 6s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    display: inline-block;
+}
+span:nth-child(1){
+    animation-delay: 0.1s;
+}
+span:nth-child(2){
+    animation-delay: 0.2s;
+}
+span:nth-child(3){
+    animation-delay: 0.3s;
+}
+span:nth-child(4){
+    animation-delay: 0.4s;
+}
+span:nth-child(5){
+    animation-delay: 0.5s;
+}
+span:nth-child(6){
+    animation-delay: 0.6s;
+}
+span:nth-child(7){
+    animation-delay: 0.7s;
+}
+span:nth-child(8){
+    animation-delay: 0.8s;
+}
+span:nth-child(9){
+    animation-delay: 0.9s;
+}
+span:nth-child(10){
+    animation-delay: 0.10s;
+}
+span:nth-child(11){
+    animation-delay: 0.11s;
+}
+
+@keyframes animation
+{
+    0%{
+        opacity:0;
+        transform:translateY(-100px) skewY(10deg) skewX(10deg) rotateZ(30deg);
+        filter:blur(10px);
+    }
+    25%{
+        opacity:1;
+        transform: translateY(0px) skewY(0deg) skewX(0deg) rotateZ(0deg);
+        filter:blur(0px);
+    }
+    75%{
+        opacity:1;
+        transform:translateY(0px) skewY(0deg) skewX(0deg) rotateZ(0deg);
+        filter:blur(0px);
+    }
+    100%{
+        opacity:0;
+        transform:translateY(-100px) skewY(10deg) skewX(10deg) rotateZ(30deg);
+        filter:blur(10px);
+    }
 }
