--- a/src/components/quizapp/quizapp.scss
+++ b/src/components/quizapp/quizapp.scss
@@ -40,4 +40,21 @@
     flex-direction: row;
 
 }
- 
+.title{
+    letter-spacing: 0px;
+    animation:text 2s 1;
+    animation-duration: 6s;
+    animation-iteration-count:infinite ;
+}
+
+@keyframes text {
+    0%{
+       letter-spacing: 0;
+    }
+    30%{
+        letter-spacing: 25px;
+    }
+    85%{
+        letter-spacing: 8px;
+    }
+}
