--- a/src/components/gamesreview/gamesreview.scss
+++ b/src/components/gamesreview/gamesreview.scss
@@ -3,6 +3,7 @@
     background-color:  #07252D;
 }
 .screen{
+   cursor: pointer;
    object-fit: contain;
    margin-top: 6em;
    margin-left: 27.5em;
