--- a/src/components/quizapp/quizapp.scss
+++ b/src/components/quizapp/quizapp.scss
@@ -40,6 +40,7 @@
     flex-direction: row;
 
 }
+/*
 .title{
     letter-spacing: 0px;
     animation:text 2s 1;
@@ -58,3 +59,4 @@
         letter-spacing: 8px;
     }
 }
+*/
